testdata/baselines/reference/submodule/compiler/import_reference-to-type-alias.errors.txt
file2.ts(1,24): error TS2307: Cannot find module 'file1' or its corresponding type declarations.


==== file2.ts (1 errors) ====
    import appJs = require("file1");
                           ~~~~~~~
!!! error TS2307: Cannot find module 'file1' or its corresponding type declarations.
    import Services = appJs.App.Services;
    var x = new Services.UserServices().getUserName();
    
==== file1.ts (0 errors) ====
    export module App {
        export module Services {
            export class UserServices {
                public getUserName(): string {
                    return "Bill Gates";
                }
            }
        }
    }
    